# resdx

./: .gitignore  HVAC1a_idf_object.idf  HVAC1a_idf_objects.py  HVAC1b_idf_object.idf  HVAC1b_idf_objects.py  HVAC2c_idf_object.idf  HVAC2c_idf_objects.py  LICENSE.txt  Pipfile  README.md  dodo.py  dx_unit.py  hvac_cases.xlsx  in.cse  main.py  pyproject.toml  setup.cfg  setup.py  write_idf_HVAC1a.idf
.github/workflows/: setup_and_test.yml
examples/: generate-205.py  generic-plotting.py  get-select-idf-objects.py  inverse-calculations.py  model-comparison.py  model-verification.py  neep-examples.py  pthp-equivalence.py  visualization.py  write-cse-with-neep-statistical-model.py
resdx/: __init__.py  conditions.py  cse.py  defrost.py  dx_unit.py  enums.py  fan.py  idf.py  models.py  neep_vchp.py  psychrometrics.py  rating_solver.py  units.py  util.py
resdx/models/: __init__.py  base_model.py  carrier_defrost_model.py  constant_model.py  defrost_model.py  henderson_defrost_model.py  neep_data.py  nrel.py  rating_correlations.py  rating_correlations.py.jinja  statistical_set.py  tabular_data.py  title24.py  unified_resnet.py  verification_model.py
test/: test_fan.py  test_neep_data.py  test_resdx.py  test_util.py
