[project]
name = "resdx"
version = "0.1.0"
description = ""
authors = [{ name = "Big Ladder Software" }]
requires-python = "~=3.10"
dependencies = [
    "koozie>=1.2.2",
    "PsychroLib>=2.5.0",
    "scipy>=1.6.3",
    "dimes",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3",
    "doit",
    "jinja2",
]
extras = ["ipykernel>=6.29.4"]

[tool.uv]
default-groups = [
    "dev",
    "extras",
]

[tool.uv.sources]
dimes = { git = "https://github.com/bigladder/dimes.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
