[project]
name = "resdx"
version = "0.1.0"
description = ""
authors = [{ name = "Big Ladder Software" }]
requires-python = "~=3.10"
dependencies = ["koozie>=1.2.2", "PsychroLib>=2.5.0", "scipy>=1.6.3", "dimes"]

[dependency-groups]
dev = ["pytest>=7.1.3", "doit", "jinja2"]
extras = ["ipykernel>=6.29.4"]

[tool.uv]
default-groups = ["dev", "extras"]

[tool.uv.sources]
dimes = { git = "https://github.com/bigladder/dimes.git", branch = "main" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "PL", "I001"]
ignore = [
    "F405", # undefined-local-with-import-star-usage
]

# [tool.mypy]
# disallow_incomplete_defs = true
# no_implicit_optional = true
# check_untyped_defs = true

# [[tool.mypy.overrides]]
# module = "resdx.*"
# disable_error_code = ["annotation-unchecked", "import"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
