[project]
>>>>>>>origin/main
dependencies = ["koozie>=1.2.2", "PsychroLib>=2.5.0", "scipy>=1.6.3", "dimes"]
description = ""
name = "resdx"
requires-python = ">=3.10"
version = "0.1.0"

[dependency-groups]
dev = ["pytest>=7.1.3", "doit", "jinja2"]
extras = ["ipykernel>=6.29.4"]

[tool.uv]
default-groups = ["dev", "extras"]

[tool.uv.sources]
dimes = {git = "https://github.com/bigladder/dimes.git", branch = "main"}#  { git = "https://github.com/bigladder/dimes.git", branch = "main" } { path = "../dimes", editable = true }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "F405", # undefined-local-with-import-star-usage
]
select = ["E", "F", "PL", "I001"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
disable_error_code = ["annotation-unchecked", "import"]
module = "resdx.*"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
